action plan , create plan

--- a/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
+++ b/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
         <div class="header_card">
-            <h3 class="card-title">Regulation for initial production control </h3>
+            <h3 class="card-title">Regulation for initial production control </h3> 
         </div>
     </div>
     <div class="card-body">
@@ -9,16 +9,19 @@
             <table id="" class="table table-bordered table-hover">
                 <thead>
                     <tr class="text-center">
-                        <th colspan="8">Observation({{actionPlanList.length}})</th>
+                        <th colspan="9">Observation({{actionPlanList.length}})
+                            <button class="btn btn-success mr-1" (click)="submit('accept')">Accept</button>
+                            <button class="btn btn-danger" (click)="submit('reject')">Reject</button>
+                        </th>
                     </tr>
                     <tr class=" text-center sticky_header fon_9">
                         <th>Observation</th>
                         <th>ITEM NO.</th>
                         <th>SUB ITEM NO. </th>
-                        <th>DESIRED IMPROVEMENT POINTS</th>
                         <th>DETAIL OF IMPROVEMENT PLAN</th>
                         <th>IN-CHARGE</th>
                         <th>DATE</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -26,26 +29,23 @@
                         <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>    
                         <td>{{i+1}}</td>
                         <td>{{i+1}}.1</td>
-                        <td><textarea [(ngModel)]="item.remarkOfAuditor" class="form-control"></textarea></td>
                         <td>{{item.detailOfImprovement}}</td>
-                        <td>{{item.incharge}}
+                        <td>{{item.incharge}}</td>
+                        <td>{{item.dateOfSubmission | date:dateFormat}}</td> 
+                        <td>
+                           <textarea [(ngModel)]="item.remarkOfAuditor" class="form-control" placeholder="Enter your Remarks"></textarea>
                         </td>
-                        <td>{{item.dateOfSubmission | date:dateFormat}}</td>
-                        <!-- <td ><input [(ngModel)]="item.dateOfSubmission" type="date"></td> -->
                     </tr>
                 </tbody>
             </table>
-        </div>
-       
-    </div>
-
-    <div class="card-footer">
-        <button (click)="submit()" class="btn btn-success">Submit</button>
-        <button (click)="back()" class="btn btn-default">Back</button>
         </div>
         <nav aria-label="Page navigation example">
             <div class="pagination justift_end">
               <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
             </div>
           </nav>
+    </div>
+    <div class="card-footer">
+        <button class="btn btn-default" (click)="close()">Back</button>
+    </div>
 </div>
