--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -13,7 +13,7 @@
                         <div class="row">
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Vendor Name</label>
+                                    <label class="form_label">Vendor Name <span class="start_css">*</span></label>
                                     <input type="text" class="form-control inputbox_css" formControlName="vendorName">
                                    <!--  <select class="form-control" formControlName="vendorId">
                                         <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.name }}</option>
@@ -22,7 +22,7 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Vendor Code</label>
+                                    <label class="form_label">Vendor Code <span class="start_css">*</span></label>
                                     <input type="text" class="form-control inputbox_css" formControlName="vendorCode">
                                    <!--  <select class="form-control" formControlName="vendorId">
                                         <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code }}</option>
@@ -31,14 +31,14 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Start Date</label>
+                                    <label class="form_label">Start Date <span class="start_css">*</span></label>
                                     <input type="date" class="form-control inputbox_css" formControlName="startDate"
                                         >
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">End Date</label>
+                                    <label class="form_label">End Date <span class="start_css">*</span></label>
                                     <input type="date" class="form-control inputbox_css" formControlName="endDate"
                                         >
                                 </div>
@@ -56,7 +56,7 @@
                             </div> -->
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Part Name</label>
+                                    <label class="form_label">Part Name <span class="start_css">*</span></label>
                                     <input type="text" class="form-control inputbox_css"
                                         placeholder="Enter Part Name"
                                         maxlength="200" formControlName="partName">
@@ -64,26 +64,26 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Actual Start Date</label>
+                                    <label class="form_label">Actual Start Date <span class="start_css">*</span></label>
                                     <input type="date" class="form-control inputbox_css" formControlName="actualStartDate">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Actual End Date</label>
+                                    <label class="form_label">Actual End Date <span class="start_css">*</span></label>
                                     <input type="date" class="form-control inputbox_css" 
                                     formControlName="actualEndDate">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Any Other location </label>
+                                    <label class="form_label">Any Other location <span class="start_css">*</span> </label>
                                     <input type="text" class="form-control" formControlName="otherLocation" placeholder="Enter other location">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Part Number </label>
+                                    <label class="form_label">Part Number <span class="start_css">*</span> </label>
                                     <input type="text" class="form-control" formControlName="partNumber" placeholder="Enter other location">
                                 </div>
                             </div>
