--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -10,7 +10,8 @@
                                 <input type="file" (change)="bulkUpload($event)" id="upload" hidden />
                                 <label for="upload" class="button-upload"> <i class="fas fa-upload mr-1 upload_ico"></i>
                                     <span class="now_rap">Upload Plan</span></label>
-                                <button class="btn btn-success d-flex align-items-center ml-1">
+                                <button class="btn btn-success d-flex align-items-center ml-1"
+                                (click)="download()">
                                     <i class="fas fa-upload mr-1 upload_ico"></i>
                                     <span class="now_rap">Download Template</span>
                                 </button>
