--- a/src/app/dashboard/evidence/section-head-data/section-head-data.component.html
+++ b/src/app/dashboard/evidence/section-head-data/section-head-data.component.html
@@ -27,10 +27,10 @@
                                 </thead>
                                 <tbody>
                                     <tr class="tbody_data" *ngFor="let item of viewPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
-                                        <td></td>                    
+                                        <td>{{item.reportReleaseDate| date:dateFormate }}</td>                    
                                         <td>{{item.vendorCode}}</td>
                                         <td>{{item.vendorName}}</td>
-                                        <td></td>
+                                        <td>{{item.auditorName}}</td>
                                         <td><a><img src="../../../../assets/img/pie-chart.png" class="w_30"></a></td>
                                         <td>{{item.observationCount}}</td>
                                         <td>
