--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -12,25 +12,22 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Code<span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendorId">
-                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code}}</option>
-                                        </select>
+                                        <input type="text" class="form-control"
+                                        formControlName="vendorCode" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Name<span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendorId">
-                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.name }}</option>
-                                        </select>
+                                        <input type="text" class="form-control"
+                                        formControlName="vendorName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Location <span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="locationId">
-                                            <option  *ngFor="let item of locationObj" [value]="item.id">{{item.name }}</option>
-                                        </select>
+                                        <input type="text" class="form-control"
+                                        formControlName="locationName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
