--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -33,8 +33,8 @@
                             </h4>
                           </div>
                           <div class="card-body"  >
-                            <div class="row">
-                              <div class="col-sm-12" [formGroupName]="i">
+                            <div class="row" [formGroupName]="i">
+                              <div class="col-sm-12" >
                              
                                 <div class="jugme_css">
                                   <label class="mb-0">Judgment</label>
