--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -1,14 +1,9 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-  <div class="user-panel">
-
-    <img src="../../../../assets/img/maruti-logo.png" class="w_190">
-
-    <div class="info">
-      <a href="#" class="d-block"></a>
-    </div>
+  <div class="user-panel" >
+    <img src="../../../../assets/img/maruti-logo.png" style="min-height: 55px;" class="w_190">
   </div>
     <div class="sidebar">
-      <nav class="mt-2">
+      <nav class="mt-2 navigation">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item" *ngIf="!isVendor">
             <a routerLink="/dashboard" class="nav-link active">
