--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@ ng-if="stopSpinner==true">
 
 <div style="clear: both;" class="clear"></div>
 </div> -->
-
+<app-sidebar  class="sidebar-dark-primary d-none"></app-sidebar>
 <div class="main">
 <div class="container-fluid">
 <div class="row hei_100">
