--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <div class="user-panel" >
-    <img src="../../../../assets/img/maruti-logo.png" style="min-height: 55px;" class="w_190">
+    <img src="../../../../assets/img/MarutiSuzukiLogo.png" style="min-height: 55px;" class="w_190">
   </div>
     <div class="sidebar">
       <nav class="mt-2 navigation">
@@ -22,14 +22,6 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-              <!-- <li class="nav-item">
-                <a routerLink="/dashboard/vendor" class="nav-link">
-                  <img src="../../assets/icons/lightbulb.png" class="side_img">
-                  <p>
-                    Vendor Master
-                  </p>
-                </a>
-              </li> -->
               <li class="nav-item">
                 <a routerLink="/dashboard/employee" class="nav-link">
                   <img src="../../assets/icons/group.png" class="side_img">
@@ -38,6 +30,14 @@
                   </p>
                 </a>
               </li>
+               <li class="nav-item">
+                <a routerLink="/dashboard/vendor" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Vendor Master
+                  </p>
+                </a>
+              </li> 
               <li class="nav-item">
                 <a routerLink="/dashboard/category" class="nav-link">
                   <img src="../../assets/icons/admin.png" class="side_img">
