--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -12,7 +12,7 @@
                                     <span class="now_rap">Upload Plan</span></label>
                                 <button class="btn btn-success d-flex align-items-center ml-1"
                                 (click)="download()">
-                                    <i class="fas fa-upload mr-1 upload_ico"></i>
+                                    <i class="fas fa-download mr-1 upload_ico"></i>
                                     <span class="now_rap">Download Template</span>
                                 </button>
                             </div>
@@ -24,21 +24,22 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Code <span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendorId"
-                                            (change)="getVendor($event)">
-                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code}}
-                                            </option>
-                                        </select>
+                                        <ng-select (change)="getVendor($event)"
+                                        
+                                        [items]="vendorObj" bindLabel="code" bindValue="id"
+                                        formControlName="vendorId" class="form-control">
+                                    </ng-select>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Name <span class="start_css">*</span></label>
 
-                                        <select class="form-control" formControlName="vendorId">
-                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.name }}
-                                            </option>
-                                        </select>
+                                         <ng-select (change)="getVendor($event)"
+                                        
+                                        [items]="vendorObj" bindLabel="name" bindValue="id"
+                                        formControlName="vendorId" class="form-control">
+                                    </ng-select>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -54,7 +55,8 @@
                                     <div class="form-group">
                                         <label class="form_label">Any Other location <span
                                                 class="start_css">*</span></label>
-                                        <input type="text" class="form-control" formControlName="otherLocation"
+                                        <input #otherLocation type="text" class="form-control" formControlName="otherLocation" 
+                                        (input)="otherLocation.value = otherLocation.value.toUpperCase()"
                                             placeholder="Type Any Other location">
                                     </div>
                                 </div>
@@ -92,7 +94,9 @@
                                         <label class="form_label">Planned Start Date <span
                                                 class="start_css">*</span></label>
                                         <input type="date" class="form-control inputbox_css"
-                                            formControlName="plannedStartDate">
+                                            formControlName="plannedStartDate"  
+                                            [min]="minStartDate"
+                                           >
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -100,7 +104,8 @@
                                         <label class="form_label">Planned End Date <span
                                                 class="start_css">*</span></label>
                                         <input type="date" class="form-control inputbox_css"
-                                            formControlName="plannedEndDate">
+                                            formControlName="plannedEndDate"
+                                            [min]="createPlanForm.controls['plannedStartDate'].value">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
