--- a/src/app/dashboard/audit-plan/pending-plan/pending-plan-list/pending-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/pending-plan/pending-plan-list/pending-plan-list.component.html
@@ -88,7 +88,7 @@
                       <td>{{item.plannedStartDate | date:dateFormate}}</td>
                       <td>{{item.plannedEndDate | date:dateFormate}}</td>
                       <td><p class="pend_coloe  backgr_blue">{{item.status}} </p></td>
-                      <td *ngIf="isVendor">  
+                      <td *ngIf="isVendor && item. status != 'Accepted'">  
                         <p class="pend_coloe backgr_green" 
                         (click)="getVendorAction(accept,item)" >Accept </p>
                         <p class="pend_coloe backgr_red" (click)="openModal(reject,item)">Reject </p>
