--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -61,7 +61,7 @@
                 <h6 class="mr-1 mb-0">Filters:-</h6>
                 <div class=" mr-1">
                   <label class="filter_label">Vendor Code</label>
-                <input type="text"  class="form-control  filter_css" placeholder="Vendor Code ">
+                <input type="text" [(ngModel)]="vendorCode" class="form-control  filter_css" placeholder="Vendor Code ">
                 </div>
                 <div class=" mr-1">
                   <label class="filter_label">Vendor Name</label>
@@ -83,11 +83,7 @@
               <div class="mt_22">
                 <button type="button" (click)="filter()" class="form-control mr-1 filter_css heigh_60 btn btn-primary"><span>Submit</span> </button>
                 <button type="button" (click)="reset()" class="form-control mr-1 filter_css heigh_60 btn btn-secondary"><span>Reset</span></button>
-             
-              </div>  <!-- <button class="btn btn-success d-flex  align-items-center">
-                  <i class="fas fa-upload mr-1 upload_ico"></i>
-                  <span class="now_rap">Upload Plan</span>
-                </button> -->
+              </div> 
               </div>
             </div>
             <div class="card-body">
