--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="header_card d-flex justify-content-between">
-                            <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+                            <h3 class="card-title">Audit Area Details</h3>
                         </div>
                     </div>
                     <form [formGroup]="initiateForm">
@@ -13,50 +13,34 @@
                         <div class="row">
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Vendor Name <span class="start_css">*</span></label>
-                                    <input type="text" class="form-control inputbox_css" formControlName="vendorName">
-                                   <!--  <select class="form-control" formControlName="vendorId">
-                                        <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.name }}</option>
-                                    </select> -->
+                                    <label class="form_label">Vendor Name</label>
+                                    <input type="text" class="form-control inputbox_css" formControlName="vendorName"
+                                    [attr.disabled]="disabled">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Vendor Code <span class="start_css">*</span></label>
-                                    <input type="text" class="form-control inputbox_css" formControlName="vendorCode">
-                                   <!--  <select class="form-control" formControlName="vendorId">
-                                        <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code }}</option>
-                                    </select> -->
+                                    <label class="form_label">Vendor Code</label>
+                                    <input type="text" class="form-control inputbox_css" formControlName="vendorCode" [attr.disabled]="disabled">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Start Date <span class="start_css">*</span></label>
-                                    <input type="date" class="form-control inputbox_css" formControlName="startDate"
-                                        >
+                                    <label class="form_label">Start Date</label>
+                                    <input type="date" class="form-control inputbox_css" formControlName="plannedStartDate"
+                                    [attr.disabled]="disabled">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">End Date <span class="start_css">*</span></label>
-                                    <input type="date" class="form-control inputbox_css" formControlName="endDate"
-                                        >
+                                    <label class="form_label">End Date</label>
+                                    <input type="date" class="form-control inputbox_css" formControlName="plannedEndDate"
+                                    [attr.disabled]="disabled"  >
                                 </div>
                             </div>
-                            <!-- <div class="col-sm-4">
-                                <div class="form-group">
-                                    <label class="form_label">Department Head </label>
-                                    <select class="form-control">
-                                        <option>Department Head 1</option>
-                                        <option>Department Head 2</option>
-                                        <option>Department Head 3</option>
-                                        <option>Department Head 4</option>
-                                    </select>
-                                </div>
-                            </div> -->
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Part Name <span class="start_css">*</span></label>
+                                    <label class="form_label">Part Name<span class="start_css">*</span></label>
                                     <input type="text" class="form-control inputbox_css"
                                         placeholder="Enter Part Name"
                                         maxlength="200" formControlName="partName">
@@ -64,64 +48,32 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
+                                    <label class="form_label">Part Number <span class="start_css">*</span> </label>
+                                    <input type="text" class="form-control" formControlName="partNumber" placeholder="Enter Part Number" >
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
                                     <label class="form_label">Actual Start Date <span class="start_css">*</span></label>
-                                    <input type="date" class="form-control inputbox_css" formControlName="actualStartDate">
+                                    <input type="date" class="form-control inputbox_css" formControlName="actualStartDate" 
+                                    [min]="initiateForm.controls['plannedStartDate'].value">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="form_label">Actual End Date <span class="start_css">*</span></label>
                                     <input type="date" class="form-control inputbox_css" 
-                                    formControlName="actualEndDate">
+                                    formControlName="actualEndDate" 
+                                    [min]="initiateForm.controls['plannedEndDate'].value">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Any Other location <span class="start_css">*</span> </label>
+                                    <label class="form_label">Any Other location</label>
                                     <input type="text" class="form-control" formControlName="otherLocation" placeholder="Enter other location">
                                 </div>
                             </div>
-                            <div class="col-sm-4">
-                                <div class="form-group">
-                                    <label class="form_label">Part Number <span class="start_css">*</span> </label>
-                                    <input type="text" class="form-control" formControlName="partNumber" placeholder="Enter other location">
-                                </div>
-                            </div>
-                            <!-- <div class="col-sm-4">
-                                <div class="form-group">
-                                    <label class="mb-0">Auditor</label>
-                                    <p class="form_label">Auditor1, Auditor2, Auditor3</p>
-                                </div>
-                            </div> -->
                         </div>
-                        <!-- <div class="row">
-                            <div class="col-sm-12">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <tr class="sticky_header">
-                                            <th scope="col">S.No</th>
-                                            <th scope="col">Vendor Attendees</th>
-                                            <th scope="col">Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">1</th>
-                                            <td>
-                                                <input type="text" class="form-control inputbox_css"
-                                                    placeholder="Enter Vendor Attendees" maxlength="200">
-                                            </td>
-                                            <td>
-                                                <div class="d-flex add_minus_mar">
-                                                    <button class="btn btn-primary">+</button>
-                                                    <button class="btn btn-danger">-</button>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div> -->
                      </div>
                     </form>
                     <div class="card-footer text-right">
