--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="card-header">
             <div class="header_card">
-              <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+              <h3 class="card-title">Audit Area Details</h3>
               <button class="btn btn-success">Download PDF</button>
             </div>
           </div>
@@ -17,8 +17,8 @@
                     <thead>
                       <tr class="text-center">
                         <th>S.No</th>
-                        <th>Text</th>
-                        <th>Complition Status</th>
+                        <th>Category</th>
+                        <th>Completion Status</th>
                         <th class="w_226">Score</th>
                       </tr>
                     </thead>
@@ -26,7 +26,7 @@
                       <tr class="text-center" *ngFor="let item of categoryScoreList;  let i =index;">
                         <td (click)="details(item.categoryId)">{{i+1}}</td>
                         <td (click)="details(item.categoryId)">{{item.name}}</td>
-                        <td (click)="details(item.categoryId)">{{item.totalCount}}
+                        <td (click)="details(item.categoryId)">{{item.totalCount}}/5
                         </td>
                         <td (click)="details(item.categoryId)">{{item.percentageCompletion}}</td>
                       </tr>
