--- a/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
@@ -1,9 +1,4 @@
 <div class="card">
-  <!--   <div class="card-header">
-      <div class="header_card">
-        <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
-      </div>
-    </div> -->
     <div class="card-body">
       <div class="accordion" id="accordionExample">
         <div class="d-flex justify-content-center align-content-center mb-2">
@@ -15,7 +10,7 @@
           <div class="card">
             <div class="card-header">
               <div class="header_card">
-                <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+                <h3 class="card-title">Audit Area Details </h3>
                 <button class="btn btn-success">Download PDF</button>
               </div>
             </div>
@@ -96,7 +91,7 @@
           <div class="card">
             <div class="card-header">
               <div class="header_card">
-                <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+                <h3 class="card-title">Audit Area Details </h3>
                 <button class="btn btn-success">Download PDF</button>
               </div>
             </div>
@@ -198,7 +193,7 @@
           <div class="card">
             <div class="card-header">
               <div class="header_card">
-                <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+                <h3 class="card-title">Audit Area Details </h3>
                 <button class="btn btn-success">Download PDF</button>
               </div>
             </div>
