--- a/src/styles.css
+++ b/src/styles.css
@@ -53551,3 +53551,23 @@
           font-size:27px;
       }
       }
+
+
+      /* CUSTOM CSS */
+ng-select.form-control,
+select.form-control{
+    background-repeat: no-repeat;
+    background-position: right .75rem center;
+    background-size: 16px 12px;
+
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+}
+span.ng-clear-wrapper {
+  opacity: 0;
+}
+.ng-dropdown-panel {
+    background: #fff;
+    left: 0px;
+    padding: 0 0 0 10px;
+    box-shadow: 0px 0px 8px 1px #00000024;
+}
