executive summary , category changes

--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -26,9 +26,11 @@
                       <tr class="text-center" *ngFor="let item of categoryScoreList;  let i =index;">
                         <td (click)="details(item.categoryId)">{{i+1}}</td>
                         <td (click)="details(item.categoryId)">{{item.name}}</td>
-                        <td (click)="details(item.categoryId)">{{item.totalCount}}/5
+                        <td (click)="details(item.categoryId)">{{item.totalCount}}/ {{item.categoryTotalCount
+                        }}
                         </td>
-                        <td (click)="details(item.categoryId)">{{item.percentageCompletion}}</td>
+                        <td (click)="details(item.categoryId)">{{item.categoryScore
+                        }}</td>
                       </tr>
                     </tbody>
                   </table>
