Assign data on Exclusive Report

--- a/src/app/dashboard/reports/executive-summary/executive-summary.component.html
+++ b/src/app/dashboard/reports/executive-summary/executive-summary.component.html
@@ -119,7 +119,7 @@
                                     <tbody>
                                         <tr class="tbody_data" *ngFor="let item of auditReportData?.catergoryWiseScoreModel;let i = index">
                                             <td>{{i+1}}</td>
-                                            <td>{{item.submittedCount}}/{{item.categoryTotalCount}}</td>
+                                            <td>{{item.observationCount}}/{{item.categoryTotalCount}}</td>
                                             <td>{{item.pieScore}}</td>
                                             <td>{{item.triangleScore}}</td>
                                             <td>{{item.xScore}}</td>
